Fixed Battlepoints menu being hard to see in light-mode

--- a/styles/less/ui/combat-sidebar/encounter-controls.less
+++ b/styles/less/ui/combat-sidebar/encounter-controls.less
@@ -10,6 +10,7 @@
         .encounter-battlepoints {
             display: flex;
             cursor: help;
+            color: light-dark(@dark, @beige);
         }
 
         .inner-controls {
